--- a/index.html
+++ b/index.html
@@ -6,30 +6,37 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Profile card component</title>
+  <title>Profile card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link href="https://fonts.google.com/specimen/Kumbh+Sans:400,700" rel="stylesheet">
+
 </head>
 <body>
-  Victor Crest
-  26
-  London
 
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
+  <div class="content-wrapper">
+    <h1>Victor Crest</h1><span>26</span>
+    <p>London</p>
+  </div>
+  <div>
+    <h1>80K</h1>
+    <p>Followers</p>
+  </div>
+  <div>
+    <h1>803K</h1>
+    <p>Likes</p>
+  </div>
+  <div>
+    <h1>1.4K</h1>
+    <p>Photos</p>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Renny</a>.
   </div>
 </body>
 </html>
