--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         </div>
           
         <div class="attribution">
-          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-          Coded by <a href="https://www.scarletcoder.com">Renny</a>.
+          <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. </p>
+          <p>Coded by <a href="https://www.scarletcoder.com">Renny</a>.</p>
         </div>
       </div>
   </body>
